# RaytracingAndVisualize

./: CMakeLists.txt  README.md
src/: Ray.cpp  Ray.h  Raytracing.cpp  Raytracing.h  Scene.cpp  Scene.h  main.cpp  utils.cpp  utils.h
test/: input.txt  mytest.txt
